--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "wordpress-starter-theme",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,18 +9,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.7.12",
-    "del": "^2.0.2",
+    "autoprefixer": "^6.1.1",
+    "browser-sync": "^2.11.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.1",
+    "gulp-concat": "~2.2.0",
     "gulp-cssnano": "^2.1.0",
-    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
-    "gulp-sass": "^2.0.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-useref": "^3.0.4",
-    "run-sequence": "^1.1.2"
+    "gulp-jshint": "~1.6.2",
+    "gulp-livereload": "~2.0.0",
+    "gulp-load-plugins": "~0.5.1",
+    "gulp-minify-css": "~0.3.4",
+    "gulp-notify": "~1.3.1",
+    "gulp-rename": "~1.2.0",
+    "gulp-ruby-sass": "~0.5.0",
+    "gulp-sass": "^2.1.1",
+    "gulp-uglify": "~0.3.0",
+    "orchestrator": "^0.3.7",
+    "susy": "~2.2.6",
+    "tiny-lr": "0.0.7"
   }
 }
