--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^6.1.1",
-    "browser-sync": "^2.11.0",
+    "browser-sync": "^2.11.1",
+    "flexslider": "^2.6.0",
     "gulp": "^3.9.0",
     "gulp-cache": "^0.4.1",
     "gulp-concat": "~2.2.0",
+    "gulp-consolidate": "^0.1.2",
     "gulp-cssnano": "^2.1.0",
+    "gulp-iconfont": "^5.0.1",
+    "gulp-iconfont-css": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "~1.6.2",
     "gulp-livereload": "~2.0.0",
