--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-load-plugins": "~0.5.1",
     "gulp-minify-css": "~0.3.4",
     "gulp-notify": "~1.3.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "~1.2.0",
     "gulp-ruby-sass": "~0.5.0",
     "gulp-sass": "^2.1.1",
